# hotelstaff-ia-toka-technical-test

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  repo-structure.md
bff/: .eslintrc.cjs  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
bff/src/: app.ts  config.ts  server.ts
bff/src/lib/: forward.ts
bff/src/plugins/: auth.ts
bff/src/routes/: agent.ts  audit.ts  auth.ts  health.ts  roles.ts  users.ts
bff/tests/: health.test.ts  routes.test.ts
docs/: arquitectura.md  ejercicio4-diagnostico.md  prompt-engineering.md
frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/: chip-input.tsx  confirm-button.tsx  layout.tsx  protected-route.tsx  ui.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: agent.tsx  audit.tsx  login.tsx  roles.tsx  staff.tsx
frontend/src/store/: auth.ts  theme.ts
infra/postgres/init/: 00-schemas.sql
libs/hotelstaff_shared/: pyproject.toml
libs/hotelstaff_shared/hotelstaff_shared/: __init__.py  config.py  correlation.py  events.py  logging.py  messaging.py  security.py
services/audit/: Dockerfile  README.md  pyproject.toml
services/audit/app/: config.py  main.py
services/audit/app/application/: __init__.py  dto.py  services.py
services/audit/app/domain/: entities.py
services/audit/app/infrastructure/: consumer.py  db.py  repository.py
services/audit/app/interfaces/: deps.py
services/audit/app/interfaces/api/: audit.py
services/audit/tests/: conftest.py  test_audit.py  test_health.py
services/auth/: Dockerfile  README.md  pyproject.toml
services/auth/alembic/: env.py
services/auth/alembic/versions/: 0001_create_users.py
services/auth/app/: config.py  main.py
services/auth/app/application/: dto.py  ports.py  services.py
services/auth/app/domain/: __init__.py  entities.py  errors.py
services/auth/app/infrastructure/: __init__.py  repositories.py
services/auth/app/infrastructure/db/: models.py  session.py
services/auth/app/infrastructure/security/: jwt_service.py  password.py
services/auth/app/interfaces/: deps.py
services/auth/app/interfaces/api/: auth.py  jwks.py
services/auth/tests/: conftest.py  test_auth_flow.py  test_health.py
services/ia-agent/: Dockerfile  README.md  pyproject.toml
services/ia-agent/app/: config.py  main.py
services/ia-agent/app/application/: dto.py  ports.py  services.py
services/ia-agent/app/domain/: entities.py
services/ia-agent/app/infrastructure/: consumer.py  embeddings.py  factories.py  llm.py  vector_store.py
services/ia-agent/app/interfaces/: __init__.py  deps.py
services/ia-agent/app/interfaces/api/: agent.py
services/ia-agent/tests/: conftest.py  test_agent.py
services/role/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/role/alembic/: env.py  script.py.mako
services/role/alembic/versions/: 0001_create_roles.py
services/role/app/: config.py  main.py
services/role/app/application/: dto.py  ports.py  services.py
services/role/app/domain/: entities.py  errors.py
services/role/app/infrastructure/: events.py  repositories.py
services/role/app/infrastructure/db/: models.py  session.py
services/role/app/interfaces/: deps.py
services/role/app/interfaces/api/: health.py  roles.py
services/role/tests/: conftest.py  test_roles.py
services/user/: Dockerfile  README.md  pyproject.toml
services/user/alembic/: env.py  script.py.mako
services/user/alembic/versions/: 0001_create_staff_users.py
services/user/app/: config.py  main.py
services/user/app/application/: dto.py  ports.py  services.py
services/user/app/domain/: entities.py  errors.py
services/user/app/infrastructure/: events.py  repositories.py  security.py  seed.py
services/user/app/infrastructure/db/: models.py
services/user/app/interfaces/: deps.py
services/user/app/interfaces/api/: users.py
services/user/tests/: conftest.py  test_health.py  test_users.py
